--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  align-self: auto;
   transform: translate(-50%, -50%);
   height: 200px;
   width: 200px;
